--- a/TechBlogNotificationsServer/build.gradle
+++ b/TechBlogNotificationsServer/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.jsoup:jsoup:1.17.2'
 }
 
 tasks.named('test') {
