--- a/TechBlogNotificationsServer/src/main/resources/application-dev.properties
+++ b/TechBlogNotificationsServer/src/main/resources/application-dev.properties
@@ -1,7 +1,6 @@
-spring.application.name=TechBlogNotificationsServer
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
