chore: AWS DB 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ package.json
 package-lock.json
 tempCodeRunnerFile.js
 
+
+### Secret config files ###
+application-aws.*
+application-local.*
+
 HELP.md
 .gradle
 build/
