feat: aws EC2 의 실제 데이터 불러오도록 함

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ tempCodeRunnerFile.js
 application-aws.*
 application-local.*
 
+config.xcconfig
+
+### Default Spring gitignore ###
+
 HELP.md
 .gradle
 build/
