--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,5 +34,5 @@ jobs:
         working-directory: TechBlogNotificationsScrapper
 
       - name: Run JAR for Scrap posts
-        run: java -jar build/libs/tech-blog-notifications-scrapper-0.0.1-SNAPSHOT.jar
+        run: java -jar ./build/libs/TechBlogNotificationsScrapper-0.0.1-SNAPSHOT.jar
         working-directory: TechBlogNotificationsScrapper
