chore: 환경변수 깃허브 액션 jar 실행 시점에도 주입

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,4 +34,8 @@ jobs:
 
       - name: Run JAR for Scrap posts
         run: java -jar ./build/libs/TechBlogNotificationsScrapper-0.0.1-SNAPSHOT.jar
+        env:
+          SPRING_DATASOURCE_URL: ${{ secrets.AWS_URL }}
+          SPRING_DATASOURCE_USERNAME: ${{ secrets.AWS_DB_USERNAME }}
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.AWS_DB_PASSWORD }}
         working-directory: TechBlogNotificationsScrapper
