--- a/TechBlogNotificationsScrapper/src/main/resources/application.yml
+++ b/TechBlogNotificationsScrapper/src/main/resources/application.yml
@@ -5,6 +5,6 @@ spring:
     hibernate:
       ddl-auto: update
   profiles:
-    include: aws
+    include: local
   main:
     web-application-type: none
