chore: ddl-auto update -> validate

--- a/TechBlogNotificationsServer/src/main/resources/application.yml
+++ b/TechBlogNotificationsServer/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: TechBlogNotificationsServer
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
   profiles:
     include: aws
 server:
